--- a/online_Shop_Bahar/src/index.css
+++ b/online_Shop_Bahar/src/index.css
@@ -195,9 +195,9 @@ height: 100%;
   color: rgb(52, 52, 52) !important;
 }
 .nav Button:hover {
-  border: 1px solid rgba(0, 0, 0, 0);
-  background-color: rgba(57, 73, 87, 0);
-  color: rgb(255, 177, 217);
+  border: 1px solid rgba(0, 0, 0, 0) !important;
+  background-color: rgba(57, 73, 87, 0) !important;
+  color: rgb(255, 177, 217) !important;
 }
 .nav Button:focus {
   border: 1px solid rgba(0, 0, 0, 0) !important;
